# html-to-elm

./: .travis.yml  LICENSE  Procfile  README.md  html-to-elm.cabal  index.html
lib/HtmlToElm/: HtmlAttributes.hs  Parser.hs  Util.hs  WhiteList.hs
src/: MainCli.hs  MainWeb.hs
test/: Generate.hs
test/elm-sources/: exampleBoth.elm  exampleHtml.elm  exampleSvg.elm
test/html-sources/: example-both.html  example-html.html  example-svg.html
web/: index.html
